show laporan psi

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,6 +1,7 @@
 @import 'bulma';
 @import './layout/container';
 @import './components/navbar';
+@import './elements/table';
 @import '~@creativebulma/bulma-collapsible';
 
 html,
